<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="username">Username:</string>
    <string name="enter">Please enter your username:</string>
    <string name="password">Password:</string>
    <string name="pwenter">Please enter your password:</string>
    <string name="confirmlabel">Confirm Password:</string>
    <string name="confirm">Please confirm password:</string>
    <string name="random">Please confirm password:</string>

</resources>
