<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
 tools:context=".LoginActivity">

 />

<LinearLayout
    android:id="@+id/fields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


<LinearLayout


    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/username"
        android:layout_weight="25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />

    <EditText
        android:id="@+id/enterun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/username"
        android:hint="@string/enter"

        android:layout_weight="75"

        />


</LinearLayout>

<LinearLayout


    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <TextView
        android:id="@+id/password"
        android:layout_weight="25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        />
    <EditText
        android:id="@+id/enterpw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/username"
        android:hint="@string/pwenter"

        android:layout_weight="75"

        />

</LinearLayout>


    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:id="@+id/pwconfirmlabel"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmlabel"
            />
        <EditText
            android:id="@+id/pwconfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username"
            android:hint="@string/confirm"

            android:layout_weight="75"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>
    <Button

        android:id="@+id/ok_button"
        android:layout_below="@+id/fields"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignRight="@+id/fields"
          />



</RelativeLayout>
